--- a/experience.html
+++ b/experience.html
@@ -135,7 +135,7 @@
                         <div class="sub"> General Manager and Mentor </div>
                     </div>
                     <div class="exp-description" style="border: 4px solid white;">
-                        <div class="descrip-head"> Skills Aquired
+                        <div class="descrip-head"> Responsibilities
                         </div>
 
                         <div class="descrip-more">• Creating a dynamic learning environment in Nepal and attracting enthusiasts from around the world in the field of Quantum Computing
@@ -170,7 +170,7 @@
                         <div class="sub">Fellow Scholar and Intern</div>
                     </div>
                     <div class="exp-description" style="border: 4px solid#3589C6;">
-                        <div class="descrip-head"> Skills Aquired
+                        <div class="descrip-head"> Responsibilities
                         </div>
 
                         <div class="descrip-more">• Collaborated to work on two project: vehicle carbon emission prediction and solving Baghchal game using Deep Q Learning.
@@ -202,7 +202,7 @@
                         <div class="sub">Student Researcher</div>
                     </div>
                     <div class="exp-description" style="border: 3px solid #B20030 ;">
-                        <div class="descrip-head"> About
+                        <div class="descrip-head"> Responsibilities
                         </div>
 
                         <div class="descrip-more">• Developed a specialized oracle tailored for scheduling problem (optimization problem) , and programmed the quantum
@@ -238,7 +238,7 @@
                         <div class="sub">Mentor</div>
                     </div>
                     <div class="exp-description">
-                        <div class="descrip-head"> About
+                        <div class="descrip-head"> Responsibilities
                         </div>
 
                         <div class="descrip-more"> •  Prepared a curriculum to study Quantum Computing and lead a 10 week project on Quantum Optimization problem
@@ -270,7 +270,7 @@
                         <div class="sub"> Creator</div>
                     </div>
                     <div class="exp-description">
-                        <div class="descrip-head"> About
+                        <div class="descrip-head"> Responsibilities
                         </div>
 
                         <div class="descrip-more">• Created and verified educational resources for high school students, in the field of physics and mathematics. 
@@ -304,7 +304,7 @@
                             <div class="sub"> Human Resources Manager </div>
                         </div>
                         <div class="exp-description">
-                            <div class="descrip-head"> About
+                            <div class="descrip-head"> Responsibilities
                             </div>
     
                             <div class="descrip-more">• Managed volunteer tasks related to the Physics Olympiad and the Treasure Hunt.
