--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="allgraphics/Lenish_Favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="allgraphics/Lenish_Favicon.ico" type="image/x-icon">
-    <title>Research & Projects</title>
+    <title>Research & Project</title>
     <link rel="stylesheet" href="research.css">
     
     <link rel="stylesheet" href="aboutme.css">
@@ -128,7 +128,7 @@
                 </div>
                 <div class="secondpart">
                     <div class="otherinfo">
-                         <img src="allgraphics/grovers-iteration.png" alt="Vocab Image">
+                         <img src="allgraphics/Grovers.png" alt="Vocab Image">
                         <button>  <p><a href="https://drive.google.com/file/d/1dBTwBAyzOHFyskLSD1Y-_Hs7XdEms-B1/view?usp=sharing">Project Link</a></p> </button>
                    
                     </div>
