Projecs and experience height

--- a/Awards.html
+++ b/Awards.html
@@ -71,7 +71,7 @@
                 <ul class="vertical-list">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
-                    <li><a href="projects.html" >Projects</a></li>
+                    <li><a href="projects.html" >Research and Projects</a></li>
                     <li><a onclick="closeOverlay()" style="text-decoration : none ; color : red;">Awards and Honors</a></li>
                    
 
