--- a/projects.html
+++ b/projects.html
@@ -11,22 +11,17 @@
 
   gtag('config', 'G-5KP4Y8WY2Q');
 </script>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="allgraphics/Lenish_Favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="allgraphics/Lenish_Favicon.ico" type="image/x-icon">
-    <title>Research & Project</title>
+    <title>Research & Projects</title>
     <link rel="stylesheet" href="research.css">
-    
     <link rel="stylesheet" href="aboutme.css">
-   
 </head>
 
 <body>
-
-
-    <div id="loader">
+ <div id="loader">
         <div class="ring-container">
             <div class="ring1">
                 <div class="ring2">
