Image Slider Highschool activity

--- a/aboutme.html
+++ b/aboutme.html
@@ -135,10 +135,12 @@
                 <div class="bgebs-body">
                     <div class="bgebs-img hiddenleft" >
                         <div class="slider">
+                            <marquee scrollamount = "15"> 
                             <img src="allgraphics/Highschool Activity/radiomalmala.jpg" alt="Image 1">
                             <img src="allgraphics/Highschool Activity/redcross.jpg" alt="Image 2">
                             <img src="allgraphics/Highschool Activity/vicepresident.jpg" alt="Image 3">
                             <img src="allgraphics/Highschool Activity/wholefirst.jpg" alt="Image 4">
+                        </marquee>
                         </div>
                     </div>
                     <div class="bgebs-text cover">
@@ -165,16 +167,17 @@
                 <div class="sxc-body">
                     <div class="sxc-img hiddenleft">
                         <div class="slider">
-                            <marquee> 
+                            <marquee scrollamount = "15"> 
                             <img src="allgraphics/Highschool Activity/Physics Club Human Resource Manager (1)_page-0001.jpg" alt="Image 1">
                             <img src="allgraphics/Highschool Activity/Mattrab Community Creator_page-0001.jpg" alt="Image 2">
                             <img src="allgraphics/Highschool Activity/7th Sxc cycle Rally-2020, Ride Against Cancer fundraiser_page-0001.jpg" alt="Image 3">
-                            <img src="allgraphics/Highschool Activity/Math Mela 2019_page-0001.jpg" alt="Image 4">
-                            <img src="allgraphics/Highschool Activity/Math Mela 2021_page-0001.jpg" alt="Image 5">
-                            <img src="allgraphics/Highschool Activity/SXC Mini Marathon 2019_page-0001.jpg" alt="Image 6">
-                            <img src="allgraphics/Highschool Activity/Chemistry Olympiad 2020_page-0001.jpg" alt="Image 7">
-                            <img src="allgraphics/Highschool Activity/Physics Olympiad 2019_page-0001.jpg" alt="Image 8">
-                            <img src="allgraphics/Highschool Activity/Intra College Quiz Competition 2021_page-0001.jpg" alt="Image 9">
+                            <img src="allgraphics/Highschool Activity/Treasure Hunt, Hunting Riches _page-0001.jpg" alt="Image 4">
+                            <img src="allgraphics/Highschool Activity/Math Mela 2019_page-0001.jpg" alt="Image 5">
+                            <img src="allgraphics/Highschool Activity/Math Mela 2021_page-0001.jpg" alt="Image 6">
+                            <img src="allgraphics/Highschool Activity/SXC Mini Marathon 2019_page-0001.jpg" alt="Image 7">
+                            <img src="allgraphics/Highschool Activity/Chemistry Olympiad 2020_page-0001.jpg" alt="Image 8">
+                            <img src="allgraphics/Highschool Activity/Physics Olympiad 2019_page-0001.jpg" alt="Image 9">
+                            <img src="allgraphics/Highschool Activity/Intra College Quiz Competition 2021_page-0001.jpg" alt="Image 10">
                             </marquee>
                         </div>
                     </div>
@@ -184,7 +187,7 @@
                         </div>
                         <div class="text-line2">◽ Fundraiser for Breast Cancer, SXC Cycle Rallay, 2020</div>
                         <div class="text-line2">◽ Hunting Riches X: 01 , SXC  Physics Club 2019</div>
-                        <div class="text-line2">◽ Maths Mela, Sodalitus De’ Mathematica 2010
+                        <div class="text-line2">◽ Maths Mela, Sodalitus De’ Mathematica 2019
                         </div>
                         <div class="text-line2">◽ Maths Mela, Sodalitus De’ Mathematica 2021
                         </div>
