--- a/experience.html
+++ b/experience.html
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="exp-right">
-                    <div class="exp-name">
+                    <div class="exp-name" style="color : black;">
                         <div class="main">QNepal </div>
                         <div class="sub"> General Manager and Mentor </div>
                     </div>
@@ -264,7 +264,7 @@
                     </div>
                 </div>
                 <div class="exp-right hiddenright">
-                    <div class="exp-name" style="background-color: #27d659;">
+                    <div class="exp-name" style="background-color: #5FCF80;">
                         <div class="main">Mattrab Community
                         </div>
                         <div class="sub"> Creator</div>
