--- a/projects.html
+++ b/projects.html
@@ -201,7 +201,7 @@
                 </div>
                 <div class="secondpart">
                     <div class="otherinfo">
-                        <img src="quantum2.jpg" alt="Quantum Project 2 Image">
+                        <img src="quantum2.jpg" alt="Vehicle_Carbon_Emission">
                         <button>  <p><a href="https://github.com/lenishu/Vehicle_Carbon_Emission">Project Link</a></p> </button>
                     </div>
                     <div class="description">
@@ -218,7 +218,7 @@
                 </div>
                 <div class="secondpart">
                     <div class="otherinfo">
-                        <img src="quantum2.jpg" alt="Quantum Project 2 Image">
+                        <img src="quantum2.jpg" alt="Vocab Assistance ">
                         <button>  <p><a href="https://github.com/lenishu/Vehicle_Carbon_Emission">Project Link</a></p> </button>
                     </div>
                     <div class="description">
