Bachal image , CO2 image and CV buttons

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
                     </div>
                 </div>
                 <div class="lower-div">  
-                    <button class="profile-btn btn"><a href="https://drive.google.com/file/d/13a8yJfwsgoLo6g7c06i0RPlsLGNAhsgr/view?usp=drive_link">
-                            CV</a> </button>
-                    <button class="profile-btn btn"><a href="https://drive.google.com/file/d/1i3s09gPAb95PhAUPcQSz6K1MzGJ6kf4c/view?usp=drive_link">Resume</a></button>
+                    <a href="https://drive.google.com/file/d/13a8yJfwsgoLo6g7c06i0RPlsLGNAhsgr/view?usp=drive_link"> <button class="profile-btn btn">
+                            CV </button> </a>
+                    <a href="https://drive.google.com/file/d/1i3s09gPAb95PhAUPcQSz6K1MzGJ6kf4c/view?usp=drive_link"> <button class="profile-btn btn">Resume</button> </a>
                 </div>
 
                 <div class="profile-icons">
