--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                         <p>Student Researcher</p> 
                     </div>
                 </div>
+
                 <div class="lower-div">  
                     <a href="https://drive.google.com/file/d/13a8yJfwsgoLo6g7c06i0RPlsLGNAhsgr/view?usp=drive_link"> <button class="profile-btn btn">
                             CV </button> </a>
@@ -154,10 +155,12 @@
                             <a
                                 href="https://www.linkedin.com/in/lenish-pandey-830720214/?originalSubdomain=np">
                                 <img src="allgraphics/linkedin.png"></a></button>
-                        <button class="my-icons"><img src="allgraphics/github.png"></bu<tton>
+                        <button class="my-icons"><img src="allgraphics/github.png"></button>
 
                     </div>
                 </div>
+
+
             </div>
         </div>
     </section>
