Text Summarization - Main Page

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
            
             <div class="bottom" id="vocab" onclick="redirectToProject()">
-                <div class="bottom-text">Vocab Assistance</div>
+                <div class="bottom-text">AI Powered Text Summarization</div>
             </div>
            
         </div>
