Small one Vocab into Text - Project Page

--- a/projects.html
+++ b/projects.html
@@ -213,7 +213,7 @@
 
 
             <div class="project-item ">
-                <div class="heads" data-text="Vocab Assistance"> <!-- Add data-text attribute -->
+                <div class="heads" data-text="Text Summarization"> <!-- Add data-text attribute -->
                     <span class="typing-text"></span> <!-- Add a span for typing effect -->
                 </div>
                 <div class="secondpart">
@@ -222,7 +222,7 @@
                         <button>  <p><a href="https://github.com/lenishu/Vehicle_Carbon_Emission">Project Link</a></p> </button>
                     </div>
                     <div class="description">
-                        <h1>Project Description</h1> <br> Vocab Assistant is a language tool designed to support vocabulary improvement. It suggests words, stores your selections, and generates references and examples based on your collected words, helping to enhance your language skills efficiently.
+                        <h1>Project Description</h1> <br> Text Summarization description : Coming Soon. Stay Tuned. 
                     </div>
                 </div>
             </div>
