None : A small error

--- a/projects.html
+++ b/projects.html
@@ -222,7 +222,7 @@
                         <button>  <p><a href="https://github.com/lenishu/Vehicle_Carbon_Emission">Project Link</a></p> </button>
                     </div>
                     <div class="description">
-                        <h1>Project Description</h1> <br> Text Summarization description : Coming Soon. Stay Tuned. 
+                        <h1>Project Description</h1> <br> Text Summarization description : Coming Soon... Stay Tuned. 
                     </div>
                 </div>
             </div>
