Updated CV and Resume

--- a/projects.html
+++ b/projects.html
@@ -219,10 +219,13 @@
                 <div class="secondpart">
                     <div class="otherinfo">
                         <img src="quantum2.jpg" alt="Vocab Assistance ">
-                        <button>  <p><a href="https://github.com/lenishu/Vehicle_Carbon_Emission">Project Link</a></p> </button>
+                        <button>  <p><a href="https://github.com/asfkfjhe/txt-summarizer">Project Link</a></p> </button>
                     </div>
                     <div class="description">
-                        <h1>Project Description</h1> <br> Text Summarization description : Coming Soon... Stay Tuned. 
+                        <h1>Project Description</h1> <br> In this project we are implementing an end-to-end Natural Language Processing (NLP) task, specifically focusing on text
+                        summarization. It covers various stages of the text summarization pipeline, from data ingestion to model evaluation, and
+                        finally deployment.The project heavily on the Hugging Face API, which provides access to Transformer-based models for NLP
+                        tasks. 
                     </div>
                 </div>
             </div>
