Text Sum Image added

--- a/projects.html
+++ b/projects.html
@@ -218,7 +218,7 @@
                 </div>
                 <div class="secondpart">
                     <div class="otherinfo">
-                        <img src="quantum2.jpg" alt="Vocab Assistance ">
+                        <img src="text-sum.jpg" alt="Text Summarization ">
                         <button>  <p><a href="https://github.com/asfkfjhe/txt-summarizer">Project Link</a></p> </button>
                     </div>
                     <div class="description">
